<resources>
    <string name="app_name">TamaGoDoWork</string>
    <string name="title_taskList">Tasks</string>
    <string name="title_pet">Pet</string>
    <string name="title_schedule">Schedule</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete Account</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="user_name">"Edit your name"</string>
    <string name="room">"Room"</string>
    <string name="Customise">"Customise"</string>
    <string name="reset_pet">"Reset your pet!"</string>

    <string name="level">Level %1$d</string>
    <string name="unlock_level">LV %1$d</string>
    <string name="unlock_message">You need to be Level %1$d to get this!</string>
    <string name="level_up_message">Congratulations! You have reached Level %1$d.</string>

    <string name="time_left_display">in %1$s</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="done">Done!</string>
    <string name="cancel">Cancel</string>
    <string name="saveChanges">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>

    <string name="name">Name</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>

    <string name="overdue">Overdue</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>

    <string name="reminders">Reminders</string>
    <string name="colorPicker">Choose a Colour:</string>

    <string name="friend_request_button">Send a Friend Request!</string>
    <string name="already_friend">%1$s is already your friend!</string>
    <string name="friend_request_sent">Friend Request Sent!</string>
</resources>