<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsAct"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/settings_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/settings_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:maxLines="1"
        android:textColor="@color/peach"/>

    <Button
        android:id="@+id/change_pet_name"
        style="@style/ButtonDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="Edit Name" />


    <Button
        android:id="@+id/btn_delete"
        style="@style/ButtonDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="@string/action_delete" />

    <Button
        android:id="@+id/btn_reset"
        style="@style/ButtonDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="@string/reset_pet" />



    <Button
        android:id="@+id/change_pwd"
        style="@style/ButtonDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/ButtonDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/peach"
        android:text="@string/action_logout" />


    <Button
        android:id="@+id/btn_back"
        style="@style/ButtonLightStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/off_white"
        android:text="@string/back"
        android:textColor="@color/peach" />
</LinearLayout>