<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_container"
        android:background="@drawable/bg_task_item"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="25sp"
            android:textColor="?attr/colorPrimary"
            android:gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <ImageButton
                        android:id="@+id/editColour"
                        android:layout_height="wrap_content"
                        android:layout_width= "wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/button_color_picker_small"
                        android:background="@android:color/transparent"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textSize="20sp"
                        android:id="@+id/editName"
                        android:maxLines="3"
                        android:inputType="text" />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:id="@+id/editDeadline"
                    android:drawablePadding="20dp"
                    android:hint="@string/deadline"
                    android:textSize="15sp"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:layout_marginBottom="20dp"
                    android:inputType="text"/>

                <!-- Reminders title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminders"
                    android:textSize="18sp"
                    android:textColor="@color/peach"/>

                <!-- Reminders checkboxes -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reminders"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ctv_1_h"
                        android:text="1 hour before"
                        android:gravity="center_vertical" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ctv_1_d"
                        android:text="1 day before"
                        android:gravity="center_vertical" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ctv_2_d"
                        android:text="2 days before"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_assignment_24"
                    android:drawableTint="@color/peach"
                    android:drawablePadding="20dp"
                    android:hint="@string/description"
                    android:textSize="15sp"
                    android:id="@+id/editDesc"
                    android:maxLines="8"
                    android:inputType="text"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                style="@style/ButtonDarkStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:text="@string/saveChanges" />

            <Button
                style="@style/ButtonLightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_edit_button"
                android:text="@string/cancel"
                android:textColor="?attr/colorPrimary"
                app:backgroundTint="@color/off_white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>