<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_peek_height"
    android:background="@drawable/bg_task_item"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskName"
                android:textColor="@color/peach"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="20dp">
            </TextView>

            <TextView
                android:id='@+id/taskDeadline'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminders"
                android:textColor="@color/peach"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/taskReminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id='@+id/taskDesc'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:textSize="15sp"
                app:drawableTint="@color/peach"
                app:drawableStartCompat="@drawable/ic_baseline_assignment_24" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="15dp" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/edit_button"
            android:text="@string/edit"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:text="@string/delete"
            android:layout_marginStart="5dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>